--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>TaskFlow</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.5.0/sql-wasm.js"></script>
+
     <script src="./custom_blocks.js"></script>
     <!-- Include Blockly JavaScript generator -->
     <!-- <script src="https://unpkg.com/blockly/blocks_compressed.js"></script> -->
@@ -60,6 +62,7 @@
         //   toolbox: document.getElementById('toolbox'),
         //   scrollbars: true
         // });
+        var db = new.SQL.Database();
 
         // Resizable Blockly injection code from Google.
         var blocklyArea = document.getElementById('blocklyArea');
