--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -62,7 +62,7 @@
         //   toolbox: document.getElementById('toolbox'),
         //   scrollbars: true
         // });
-        var db = new.SQL.Database();
+        var db = new SQL.Database();
 
         // Resizable Blockly injection code from Google.
         var blocklyArea = document.getElementById('blocklyArea');
