--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="./custom_blocks.js"></script>
     <!-- Include Blockly JavaScript generator -->
-    <!-- <script src="https://unpkg.com/blockly/blocks_compressed.js"></script> -->
+    <script src="https://unpkg.com/blockly/blocks_compressed.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
