--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -29,6 +29,8 @@
         <block type="assign_task"></block>
         <block type="set_dependency"></block>
         <block type="update_task_status"></block>
+        <block type="retrieve_tasks"></block>
+
       </category>
       <category name="Filters">
         <block type="filter_tasks"></block>
