--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -4,6 +4,10 @@
     <title>TaskFlow</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="./custom_blocks.js"></script>
+    <script src="https://unpkg.com/blockly/blockly_compressed.js"></script>
+    <script src="https://unpkg.com/blockly/javascript_compressed.js"></script>
+    <script src="https://unpkg.com/blockly/python_compressed.js"></script>
+    <script src="https://unpkg.com/blockly/msg/en.js"></script>
     <!-- Include Blockly JavaScript generator -->
     <script src="https://unpkg.com/blockly/blocks_compressed.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
