--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -4,12 +4,8 @@
     <title>TaskFlow</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="./custom_blocks.js"></script>
-    <script src="https://unpkg.com/blockly/blockly_compressed.js"></script>
-    <script src="https://unpkg.com/blockly/javascript_compressed.js"></script>
-    <script src="https://unpkg.com/blockly/python_compressed.js"></script>
-    <script src="https://unpkg.com/blockly/msg/en.js"></script>
     <!-- Include Blockly JavaScript generator -->
-    <script src="https://unpkg.com/blockly/blocks_compressed.js"></script>
+    <!-- <script src="https://unpkg.com/blockly/blocks_compressed.js"></script> -->
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -33,8 +29,6 @@
         <block type="assign_task"></block>
         <block type="set_dependency"></block>
         <block type="update_task_status"></block>
-        <block type="retrieve_tasks"></block>
-
       </category>
       <category name="Filters">
         <block type="filter_tasks"></block>
@@ -66,6 +60,7 @@
         //   toolbox: document.getElementById('toolbox'),
         //   scrollbars: true
         // });
+
         // Resizable Blockly injection code from Google.
         var blocklyArea = document.getElementById('blocklyArea');
         var blocklyDiv = document.getElementById('blocklyDiv');
