--- a/testingstuffwilldeletelater/index.html
+++ b/testingstuffwilldeletelater/index.html
@@ -33,6 +33,8 @@
       <category name="Filters">
         <block type="filter_tasks"></block>
         <block type="sort_tasks"></block>
+        <block type="filter_condition"></block>
+        <block type="retrieve_tasks"></block>
       </category>
       <category name="Text">
         <block type="text"></block>
