--- a/src/index.html
+++ b/src/index.html
@@ -33,16 +33,19 @@
       <category name="Filters">
         <block type="filter_tasks"></block>
         <block type="sort_tasks"></block>
+        <block type="retrieve_tasks"></block>
       </category>
       <category name="Text">
         <block type="text"></block>
         <block type="custom_date"></block>
+        <block type="status"></block>
+
       </category>
     </xml>
 
     <div class="row button-row">
-        <button onclick="generateCode()">Generate JavaScript</button>
-        <button onclick="runCode()">Run JavaScript</button>
+        <button onclick="generateCode()">Generate Code</button>
+        <button onclick="runCode()">Run Code</button>
         <button onclick="saveBlocks()">Save Blocks</button>
         <button onclick="loadBlocks()">Load Blocks</button>
         <button onclick="saveCode()">Save Code</button>
