--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <title>TaskFlow</title>
     <script src="https://unpkg.com/blockly/blockly.min.js"></script>
     <script src="./custom_blocks.js"></script>
+    <script src="./defaultBlocks.js"></script>
+
     <!-- Include Blockly JavaScript generator -->
     <!-- <script src="https://unpkg.com/blockly/blocks_compressed.js"></script> -->
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -70,6 +72,9 @@
         var workspace = Blockly.inject(blocklyDiv,
             {media: 'https://unpkg.com/browse/blockly@10.2.2/media/',
             toolbox: document.getElementById('toolbox')});
+        // No changes here, use defaultBlocks directly
+        var defaultBlocksDom = Blockly.utils.xml.textToDom(defaultBlocks);
+        Blockly.Xml.domToWorkspace(defaultBlocksDom, workspace);
         var onresize = function(e) {
           // Compute the absolute coordinates and dimensions of blocklyArea.
           var element = blocklyArea;
